@@ -56,6 +56,7 @@ static void sp_style_read_iscale24 (SPIScale24 *val, const guchar *str);
 static void sp_style_read_ienum (SPIEnum *val, const guchar *str, const SPStyleEnum *dict, unsigned int inherit);
 static void sp_style_read_istring (SPIString *val, const guchar *str);
 static void sp_style_read_ilength (SPILength *val, const guchar *str);
+static void sp_style_read_icolor (SPIPaint *paint, const guchar *str, SPStyle *style, SPDocument *document);
 static void sp_style_read_ipaint (SPIPaint *paint, const guchar *str, SPStyle *style, SPDocument *document);
 static void sp_style_read_ifontsize (SPIFontSize *val, const guchar *str);
 
@@ -327,6 +328,14 @@ sp_style_read (SPStyle *style, SPObject *object, SPRepr *repr)
 			sp_style_read_iscale24 (&style->opacity, val);
 		}
 	}
+	/* color */
+	if (!style->color.set) {
+		val = sp_repr_attr (repr, "color");
+		if (val) {
+			/* fixme: Disallow parsing paintservers */
+			sp_style_read_icolor (&style->color, val, style, (object) ? SP_OBJECT_DOCUMENT (object) : NULL);
+		}
+	}
 	/* fill */
 	if (!style->fill.set) {
 		val = sp_repr_attr (repr, "fill");
@@ -482,6 +491,10 @@ sp_style_merge_property (SPStyle *style, gint id, const guchar *val)
 	/* Misc */
 	case SP_PROP_CLIP:
 	case SP_PROP_COLOR:
+		if (!style->color.set) {
+			sp_style_read_icolor (&style->color, val, style, (style->object) ? SP_OBJECT_DOCUMENT (style->object) : NULL);
+		}
+		break;
 	case SP_PROP_CURSOR:
 		g_warning ("Unimplemented style property id: %d value: %s", id, val);
 		break;
@@ -748,7 +761,14 @@ sp_style_merge_from_parent (SPStyle *style, SPStyle *parent)
 		style->visibility = parent->visibility;
 		style->visibility_set = TRUE;
 	}
-	if (!style->fill.set || style->fill.inherit) {
+
+	/* Color */
+	if (!style->color.set || style->color.inherit) {
+		/* We can use paint merge here because parent is guaranteed to be color */
+		sp_style_merge_ipaint (style, &style->color, &parent->color);
+	}
+
+	if (!style->fill.set || style->fill.inherit || style->fill.currentcolor) {
 		sp_style_merge_ipaint (style, &style->fill, &parent->fill);
 	}
 	if (!style->fill_opacity.set || style->fill_opacity.inherit) {
@@ -758,7 +778,7 @@ sp_style_merge_from_parent (SPStyle *style, SPStyle *parent)
 		style->fill_rule.computed = parent->fill_rule.computed;
 	}
 	/* Stroke */
-	if (!style->stroke.set || style->stroke.inherit) {
+	if (!style->stroke.set || style->stroke.inherit || style->stroke.currentcolor) {
 		sp_style_merge_ipaint (style, &style->stroke, &parent->stroke);
 	}
 	if (!style->stroke_width.set || style->stroke_width.inherit) {
@@ -848,6 +868,12 @@ static void
 sp_style_merge_ipaint (SPStyle *style, SPIPaint *paint, SPIPaint *parent)
 {
 	sp_style_paint_clear (style, paint, TRUE, FALSE);
+	if ((paint->set && paint->currentcolor) || parent->currentcolor) {
+		paint->currentcolor = TRUE;
+		paint->type = SP_PAINT_TYPE_COLOR;
+		sp_color_copy (&paint->value.color, &style->color.value.color);
+		return;
+	}
 	paint->type = parent->type;
 	switch (paint->type) {
 	case SP_PAINT_TYPE_COLOR:
@@ -893,6 +919,7 @@ sp_style_write_string (SPStyle *style)
 	if (style->opacity.set && style->opacity.value != SP_SCALE24_MAX) {
 		p += sp_style_write_iscale24 (p, c + BMAX - p, "opacity", &style->opacity, NULL, SP_STYLE_FLAG_IFSET);
 	}
+	p += sp_style_write_ipaint (p, c + BMAX - p, "color", &style->color, NULL, SP_STYLE_FLAG_IFSET);
 	p += sp_style_write_ipaint (p, c + BMAX - p, "fill", &style->fill, NULL, SP_STYLE_FLAG_IFSET);
 	p += sp_style_write_iscale24 (p, c + BMAX - p, "fill-opacity", &style->fill_opacity, NULL, SP_STYLE_FLAG_IFSET);
 	p += sp_style_write_ienum (p, c + BMAX - p, "fill-rule", enum_fill_rule, &style->fill_rule, NULL, SP_STYLE_FLAG_IFSET);
@@ -954,6 +981,7 @@ sp_style_write_difference (SPStyle *from, SPStyle *to)
 	if (from->opacity.set && from->opacity.value != SP_SCALE24_MAX) {
 		p += sp_style_write_iscale24 (p, c + BMAX - p, "opacity", &from->opacity, &to->opacity, SP_STYLE_FLAG_IFDIFF);
 	}
+	p += sp_style_write_ipaint (p, c + BMAX - p, "color", &from->color, &to->color, SP_STYLE_FLAG_IFSET);
 	p += sp_style_write_ipaint (p, c + BMAX - p, "fill", &from->fill, &to->fill, SP_STYLE_FLAG_IFDIFF);
 	p += sp_style_write_iscale24 (p, c + BMAX - p, "fill-opacity", &from->fill_opacity, &to->fill_opacity, SP_STYLE_FLAG_IFDIFF);
 	p += sp_style_write_ienum (p, c + BMAX - p, "fill-rule", enum_fill_rule, &from->fill_rule, &to->fill_rule, SP_STYLE_FLAG_IFDIFF);
@@ -1042,6 +1070,9 @@ sp_style_clear (SPStyle *style)
 	style->opacity.value = SP_SCALE24_MAX;
 	style->display = TRUE;
 	style->visibility = TRUE;
+
+	style->color.type = SP_PAINT_TYPE_COLOR;
+	sp_color_set_rgb_float (&style->color.value.color, 0.0, 0.0, 0.0);
 
 	style->fill.type = SP_PAINT_TYPE_COLOR;
 	sp_color_set_rgb_float (&style->fill.value.color, 0.0, 0.0, 0.0);
@@ -1396,11 +1427,36 @@ sp_style_read_ilength (SPILength *val, const guchar *str)
 }
 
 static void
+sp_style_read_icolor (SPIPaint *paint, const guchar *str, SPStyle *style, SPDocument *document)
+{
+	if (!strcmp (str, "inherit")) {
+		paint->set = TRUE;
+		paint->inherit = TRUE;
+		paint->currentcolor = FALSE;
+	} else {
+		guint32 color;
+
+		paint->type = SP_PAINT_TYPE_COLOR;
+		color = sp_color_get_rgba32_ualpha (&paint->value.color, 0);
+		color = sp_svg_read_color (str, color);
+		sp_color_set_rgb_rgba32 (&paint->value.color, color);
+		paint->set = TRUE;
+		paint->inherit = FALSE;
+		paint->currentcolor = FALSE;
+	}
+}
+
+static void
 sp_style_read_ipaint (SPIPaint *paint, const guchar *str, SPStyle *style, SPDocument *document)
 {
 	if (!strcmp (str, "inherit")) {
 		paint->set = TRUE;
 		paint->inherit = TRUE;
+		paint->currentcolor = FALSE;
+	} else if (!strcmp (str, "currentColor")) {
+		paint->set = TRUE;
+		paint->inherit = FALSE;
+		paint->currentcolor = TRUE;
 	} else {
 		guint32 color;
 		if (!strncmp (str, "url", 3)) {
@@ -1420,6 +1476,7 @@ sp_style_read_ipaint (SPIPaint *paint, const guchar *str, SPStyle *style, SPDocu
 						  G_CALLBACK (sp_style_paint_server_modified), style);
 				paint->set = TRUE;
 				paint->inherit = FALSE;
+				paint->currentcolor = FALSE;
 				return;
 			} else {
 				paint->set = FALSE;
@@ -1429,6 +1486,7 @@ sp_style_read_ipaint (SPIPaint *paint, const guchar *str, SPStyle *style, SPDocu
 			paint->type = SP_PAINT_TYPE_NONE;
 			paint->set = TRUE;
 			paint->inherit = FALSE;
+			paint->currentcolor = FALSE;
 			return;
 		}
 
@@ -1438,6 +1496,7 @@ sp_style_read_ipaint (SPIPaint *paint, const guchar *str, SPStyle *style, SPDocu
 		sp_color_set_rgb_rgba32 (&paint->value.color, color);
 		paint->set = TRUE;
 		paint->inherit = FALSE;
+		paint->currentcolor = FALSE;
 	}
 }
 
@@ -1706,6 +1765,8 @@ sp_style_write_ipaint (guchar *b, gint len, const guchar *key, SPIPaint *paint, 
 	    ((flags & SP_STYLE_FLAG_IFDIFF) && sp_paint_differ (paint, base))) {
 		if (paint->inherit) {
 			return g_snprintf (b, len, "%s:inherit;", key);
+		} else if (paint->currentcolor) {
+			return g_snprintf (b, len, "%s:currentColor;", key);
 		} else {
 			switch (paint->type) {
 			case SP_PAINT_TYPE_COLOR:
